--- a/Homepage.html
+++ b/Homepage.html
@@ -11,7 +11,7 @@
             Home
         </h2>
 
-        
+     <div class="form">  
         <div class="dropdown">
             <button class="dropbtn">Rechnung schreiben</button>
             <div class="dropdown-content">
@@ -22,20 +22,25 @@
         <div class="dropdown">
             <button class="dropbtn">Rechnung suchen</button>
             <div class="dropdown-content">
-                <a href="lastmade">kürzlich verfasst</a>
+                <a href="lastmade">kuerzlich verfasst</a>
                 <a href="forName">nach Name</a>
                 <a href="forDate">nach Datum</a>
                 <a href="randomsearch">spezifisch</a>
             </div>
         </div>
         <div class="dropdown">
-            <button class="dropbtn">Änderungen</button>
+            <button class="dropbtn">Aenderungen</button>
             <div class="dropdown-content">
-                <a href="stdsender">standart Sender ändern</a>
-                <a href="stdreceiverdelete">standart Empfänger löschen</a>
-                <a href="stdreceiver">standart Empfänger hinzufügen</a>
+                <a href="stdsender">standart Sender aendern</a>
+                <a href="stdreceiverdelete">standart Empfänger loeschen</a>
+                <a href="stdreceiver">standart Empfaenger hinzufügen</a>
             </div>
         </div>
-            <button>logout</button>
+        <div class="dropdown">
+            <a href="Loginpage.html">          
+               <input type="button" value="logout">
+            </a> 
+        </div>
+       </div>     
     </body>
 </html>
